--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,10 +1,10 @@
-db.driverLocation=E:/mysql-connector-java-5.1.6-bin.jar
+db.driverLocation=/developer/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
 
 #db.url=jdbc:mysql://192.1.1.1:3306/mmall?characterEncoding=utf-8
 db.url=jdbc:mysql://localhost:3306/mmall?characterEncoding=utf-8
-db.username=root
-db.password=root
+db.username=mmall
+db.password=659699
 
 
 db.initialSize = 20
