--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,8 +1,7 @@
-ftp.server.ip=127.0.0.1
-ftp.user=dcw
+ftp.server.ip=47.94.134.90
+ftp.user=ftpuser
 ftp.pass=123456
-
-ftp.server.http.prefix=ftp://dcw:123456@img.happymmall.com/
+ftp.server.http.prefix=http://img.dongcewei.com/
 
 
 alipay.callback.url=http://j46b7c.natappfree.cc/order/alipay_callback.do
