--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,6 +1,6 @@
 ftp.server.ip=47.94.134.90
 ftp.user=ftpuser
-ftp.pass=123456
+ftp.pass=781194033aA!
 ftp.server.http.prefix=http://img.dongcewei.com/
 
 
